# edu-librarian

./: .env.example  .gitignore  README.md  config.yml  main.py  pyproject.toml
corpus/: corpus.yml
prompts/templates/: librarian.jinja
src/edu_librarian/: agent.py  chat_model.py  config.py  prompts.py
src/edu_librarian/rag/: corpus.py  embeddings.py  splitter.py
